Fix advanced search on ios 10
Closes #773

--- a/src/styl/search.styl
+++ b/src/styl/search.styl
@@ -58,9 +58,6 @@
       right 5px
       color #5f5f5f
 
-.searchWraper
-  height 100%
-
 .searchGamesList
   &.searching
     min-height 100px
